--- a/TalkingCharacters/TalkingCharacters/Base.lproj/Main.storyboard
+++ b/TalkingCharacters/TalkingCharacters/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,7 +25,23 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lum-T0-w8q" id="gex-5j-eMc">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="119.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0UN-rq-Kdf">
+                                            <rect key="frame" x="157" y="10" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="7zO-ke-Uqp"/>
+                                                <constraint firstAttribute="height" constant="100" id="b7h-Y3-BjU"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="0UN-rq-Kdf" firstAttribute="centerY" secondItem="gex-5j-eMc" secondAttribute="centerY" id="bPP-Fm-flS"/>
+                                        <constraint firstItem="0UN-rq-Kdf" firstAttribute="centerX" secondItem="gex-5j-eMc" secondAttribute="centerX" id="lj9-O3-bgp"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Qlv-vO-EWH" kind="show" id="2WY-RF-Bjz"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -37,6 +54,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zI6-Tj-FQz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="233" y="169"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="RyN-C9-gDY">
+            <objects>
+                <viewController id="Qlv-vO-EWH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cCk-v6-bBM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOg-XP-7Oo">
+                                <rect key="frame" x="171.5" y="128" width="71" height="36"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dc4-bg-Ewz">
+                                <rect key="frame" x="20" y="224" width="374" height="618"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FOg-XP-7Oo" firstAttribute="centerX" secondItem="cCk-v6-bBM" secondAttribute="centerX" id="CGg-a4-tuF"/>
+                            <constraint firstItem="Dc4-bg-Ewz" firstAttribute="leading" secondItem="6cI-mR-xxu" secondAttribute="leading" constant="20" id="DAR-Qk-01R"/>
+                            <constraint firstItem="Dc4-bg-Ewz" firstAttribute="centerX" secondItem="cCk-v6-bBM" secondAttribute="centerX" id="GcK-29-lwM"/>
+                            <constraint firstItem="FOg-XP-7Oo" firstAttribute="top" secondItem="6cI-mR-xxu" secondAttribute="top" constant="40" id="UuH-36-fKS"/>
+                            <constraint firstItem="6cI-mR-xxu" firstAttribute="bottom" secondItem="Dc4-bg-Ewz" secondAttribute="bottom" constant="20" id="YIz-jU-fJ5"/>
+                            <constraint firstItem="6cI-mR-xxu" firstAttribute="trailing" secondItem="Dc4-bg-Ewz" secondAttribute="trailing" constant="20" id="uLw-N0-22Q"/>
+                            <constraint firstItem="Dc4-bg-Ewz" firstAttribute="top" secondItem="FOg-XP-7Oo" secondAttribute="bottom" constant="60" id="vaR-9q-cSU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6cI-mR-xxu"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Il-VK-mXq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="938" y="169"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rQ9-tH-bib">
